--- a/E-ASTEKPAM.html
+++ b/E-ASTEKPAM.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="E-ASTEKPAM adalah sistem elektronik untuk laporan ASTEKPAM. Cepat, terstruktur, catat unit, tanggal, peralatan, arahan. Fasilitasi transisi keamanan.">
     <title>E-ASTEKPAM</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://sippn.menpan.go.id/images/article/large/logorutwsb1.png">
     <!-- Tambahkan link CSS Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- Tambahkan link CSS Default -->
-    <link rel="stylesheet" type="text/css" href="/asset/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/all.min.css">
     <!-- Tambahkan link CSS Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Tambahkan link Google Fonts untuk font Roboto -->
@@ -210,6 +211,6 @@
     <!-- Tambahkan script JavaScript Bootstrap (Jika diperlukan) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <script src="/asset/js/all.min.js"></script>
+    <script src="/assets/js/all.min.js"></script>
   </body>
 </html>
