--- a/E-ASTEKPAM.html
+++ b/E-ASTEKPAM.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1200">
     <meta name="description" content="E-ASTEKPAM adalah sistem elektronik untuk laporan ASTEKPAM. Cepat, terstruktur, catat unit, tanggal, peralatan, arahan. Fasilitasi transisi keamanan.">
     <title>E-ASTEKPAM</title>
     <!-- Favicon -->
