--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- Tambahkan link CSS Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- Tambahkan link CSS Default -->
-    <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/eliyantosarage/e-astekpam@main/assets/css/all.min.css"> -->
-    <link href="/e-astekpam/assets/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/eliyantosarage/e-astekpam@main/assets/css/all.min.css">
     <!-- Tambahkan link CSS Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Tambahkan link Google Fonts untuk font Roboto -->
@@ -209,8 +208,7 @@
     <!-- Tambahkan script JavaScript Bootstrap (Jika diperlukan) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/gh/eliyantosarage/e-astekpam@main/assets/js/all.min.js"></script> -->
-    <script src="/e-astekpam/assets/js/all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/eliyantosarage/e-astekpam@main/assets/js/all.min.js"></script>
     <script>
       let isModalVisible = false;
       let notificationModal = null;
